eggenberg-reverse-proxy-cluster/bootstrap/argocd/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "argo-lb.philippmhauptmann.me"
      tls:
        mode: SIMPLE
        credentialName: wildcard-philippmhauptmann-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "argo-lb.philippmhauptmann.me"
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
